# polymarket-arbitrage-bot

./: .env.example  .gitignore  Dockerfile  README.md  analyze_profitability.py  arbitrage_detector.py  async_dashboard.py  async_scanner.py  config.py  dashboard.py  main.py  main_async.py  market_scanner.py  market_types.py  opportunities.json  paper_trader.py  positions.json  profit_stats.txt  requirements.txt  start.sh  trade_types.py  trades.json  websocket_client.py
rust-scanner/: Cargo.toml  opportunities.json
rust-scanner/src/: execute.rs  main.rs  mock_data.rs
static/: app.js  styles.css
templates/: index.html
tests/: test_arbitrage.py  test_paper_trader.py
